# timedelta.py

./: README.md  setup.cfg  setup.py
tests/timedelta/examples/: total.py
timedelta/: __init__.py
